feat(validation): добавить enum FindBy для валидации входных параметров запроса